Changes between 1.1 and 1.2:

 - Relaxed some overly restrictive tests that could trip asserts without
   good reason.

 - Fixed a bug that broke adding SMF events in the middle of the track
   in some cases.

 - Fixed a bug that broke removing tracks in some cases.

   If you encountered failed assertion during saving, it could be one
   of these bugs.

Changes between 1.0 and 1.1:

 - libsmf released separately from jack-smf-utils.

 - Fixed build on SunOS.

 - Add "text" command to smfsh and corresponding smf_event_new_textual() API function.

 - smf_track_remove_event renamed to smf_event_remove_from_track, for consistency.
   That won't happen anymore, I promise.  ;-)
