@@ -39,7 +39,11 @@
 #include <assert.h>
 #include <math.h>
 #include <errno.h>
+#ifdef __MINGW32__
+#include <windows.h>
+#else /* ! __MINGW32__ */
 #include <arpa/inet.h>
+#endif /* ! __MINGW32__ */
 #include "smf.h"
 #include "smf_private.h"
 
